tests/idris2/error/perror014/expected
1/1: Building ParseList (ParseList.idr)
Error: Couldn't parse any alternatives:
1: Expected 'case', 'if', 'do', application or operator expression.

ParseList:8:5--8:6
 4 |     , 1
 5 |     , 2
 6 |     , 3
 7 |     , 4,
 8 |     , 5
         ^
... (42 others)
